@@ -1,3 +1,14 @@
+2013-07-01 Philipp Klaus Krause <pkk AT spth.de>
+
+	* src/SDCClospre.hpp,
+	  src/SDCClospre.cc:
+	  Improve handling of register-pressure in lospre.
+
+2013-07-01 Philipp Klaus Krause <pkk AT spth.de>
+
+	* src/SDCClospre.cc:
+	  Mark receive opcodes as invalidating for losrpe.
+
 2013-06-30 Philipp Klaus Krause <pkk AT spth.de>
 
 	* src/SDCClospre.hpp,
